Changes by bonoj